--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Update README with recent activity
-        uses: joseolmes/jose-olmes@main # Reemplaza con tu información
+        uses: jose-olmes/jose-olmes@main # Reemplaza con tu información
