--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -11,4 +11,21 @@ jobs:
     name: Update Profile README
       
     steps:      
-      - uses: actions/checkout@v3
+      # 1. Checkout del repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Obtener actividad reciente con un Action
+      - name: Fetch recent activity
+        uses: readme-activity/github-activity-readme@v2.0.2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 3. Commit y push de los cambios
+      - name: Commit and Push Changes
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Updated recent activity"
+          git push
