--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -9,24 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Update Profile README
-
-    steps:
-      # 1. Checkout del repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # 2. Generar actividad reciente en el README
-      - name: Update recent activity
-        uses: Readme-Workflows/recent-activity@v2.0.0
-        with:
-          GH_USERNAME: "tu_nombre_de_usuario" # Reemplaza con tu nombre de usuario
-          CONFIG_FILE: ".github/recent-activity.config.yml"
-
-      # 3. Commit y push de los cambios
-      - name: Commit and Push Changes
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Updated recent activity"
-          git push
+      
+    steps:      
+      - uses: actions/checkout@v2.3.4 
+      
+      - uses: Readme-Workflows/recent-activity@v2.4.1
+        env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
